--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="IvySphere is a comprehensive college application preparation platform designed to help students succeed in their college admissions journey." />
+    <meta name="keywords" content="college application, college preparation, college admissions, IvySphere, education platform" />
+    <meta name="author" content="IvySphere Team" />
+    <meta property="og:title" content="IvySphere | College Application Preparation Platform" />
+    <meta property="og:description" content="IvySphere is a comprehensive college application preparation platform designed to help students succeed in their college admissions journey." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.ivysphere.netlify.app" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="IvySphere | College Application Preparation Platform" />
+    <meta name="twitter:description" content="IvySphere is a comprehensive college application preparation platform designed to help students succeed in their college admissions journey." />
+    <meta name="twitter:image" content="https://www.ivysphere.com/images/twitter-image.jpg" />
     <title>IvySphere | College Application Preparation Platform</title>
   </head>
   <body>
