--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="IvySphere is a comprehensive college application preparation platform designed to help students succeed in their college admissions journey." />
     <meta name="keywords" content="college application, college preparation, college admissions, IvySphere, education platform" />
     <meta name="author" content="IvySphere Team" />
+    <title>IvySphere | College Application Preparation Platform</title>
     <meta property="og:title" content="IvySphere | College Application Preparation Platform" />
     <meta property="og:description" content="IvySphere is a comprehensive college application preparation platform designed to help students succeed in their college admissions journey." />
     <meta property="og:type" content="website" />
@@ -14,6 +15,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
